--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stream-io/video-react-sdk": "^1.32.2",
     "@tanstack/react-query": "^5.90.21",
     "axios": "^1.13.5",
     "lucide-react": "^0.563.0",
@@ -18,6 +19,8 @@
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.13.0",
     "root": "github:tanstack/react-query",
+    "stream-chat": "^9.32.0",
+    "stream-chat-react": "^13.13.6",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
