--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "mongoose": "^9.1.6",
     "nodemon": "^3.1.11",
     "stream-chat": "^9.31.0",
+    "streamify": "file:..",
     "zod": "^4.3.6"
   }
 }
