--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-      "start": "npm run start --prefix backend"
-    
+    "build": "npm run install-deps && npm run build-frontend",
+    "install-deps": "cd backend && npm install && cd ../frontend && npm install",
+    "build-frontend": "cd frontend && npm run build",
+    "start": "cd backend && npm start"
   },
   "repository": {
     "type": "git",
