--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@stream-io/video-react-sdk": "^1.32.2",
     "@tanstack/react-query": "^5.90.21",
+    "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.24",
     "axios": "^1.13.5",
+    "daisyui": "^4.12.24",
     "lucide-react": "^0.563.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
@@ -22,22 +26,17 @@
     "stream-chat": "^9.32.0",
     "stream-chat-react": "^13.13.6",
     "streamify": "file:..",
-    "zustand": "^5.0.11",
-     "vite": "^6.3.5"
+    "tailwindcss": "^3.4.19",
+    "vite": "^6.3.5",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "autoprefixer": "^10.4.24",
-    "daisyui": "^4.12.24",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19"
-    
+    "globals": "^16.0.0"
   }
 }
